[project]
name = "adk-skills"
version = "0.1.0"
description = "ADK agent demonstrating 4 skill patterns: inline, file-based, external, and meta (skill-creator). Uses SkillToolset for progressive disclosure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache License 2.0" }

dependencies = [
  "google-adk>=1.0.0,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
